# qtConsole

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
include/: mainwindow.h  qpyconsole.h
src/: mainwindow.cpp  pymain.cpp  qpyconsole.cpp
test/: CMakeLists.txt  qconsole_tests.cpp  qpyconsole_tests.cpp
